  * Call dh_fixperms before dh_strip so that the WebAuth Perl module will
    be stripped properly.
  * Use ${binary:Version} instead of ${Source-Version} in debian/control.
  * Move the Homepage pseudo-header from Description to a real header.
  * Wrap all Depends lines in debian/control.
  * Drop the version on the Perl build-depends.  That version is older
    than oldstable.
  * Update standards version to 3.7.3 (no changes required).
  * Update debhelper compatibility level to V5 (no changes required).

 --

webauth (3.5.4-1) unstable; urgency=low

  * New upstream release.
    - WebLogin supports displaying destination Shibboleth URLs.
    - Be more aggressive about telling browsers not to cache.
    - Properly merge directory configurations in mod_webauthldap.
    - Refresh REMOTE_USER cookies in WebLogin.
    - Improved WebLogin documentation of cookies used.
  * Put the Apache modules in the net section to match overrides.

 -- Russ Allbery <rra@debian.org>  Tue, 24 Apr 2007 14:35:35 -0700

webauth (3.5.3-2) unstable; urgency=low

  * Rebuild for Apache 2.2.
    - Add versioned build dependency.
    - Change module dependencies from apache2 to apache2.2-common.
    - Document the need to enable authz_user.
  * Depend on apache2-threaded-dev rather than on the virtual apache2-dev
    package.

 -- Russ Allbery <rra@debian.org>  Mon,  9 Oct 2006 16:07:54 -0700

webauth (3.5.3-1) unstable; urgency=low

  * New usptream release.
    - Upstream source now supports Apache 2.2 builds.
    - Improve and document mod_webkdc logging.
    - Disable debug logging in the weblogin scripts.

 -- Russ Allbery <rra@debian.org>  Mon, 11 Sep 2006 20:34:07 -0700

webauth (3.5.2-1) unstable; urgency=medium

  * New upstream release.
    - SECURITY: Fix the default weblogin templates to always escape form
      variables.  Sites using customized templates should check their
      templates for the same issue; see NEWS.gz for more information.