@@ -15,6 +15,7 @@ webauth (3.5.5-1) unstable; urgency=low
   * Wrap all Depends lines in debian/control.
   * Drop the version on the Perl build-depends.  That version is older
     than oldstable.
+  * Use a configure-stamp file rather than config.status.
   * Update standards version to 3.7.3 (no changes required).
   * Update debhelper compatibility level to V5 (no changes required).
 
